# zero2prod

./: .dockerignore  Cargo.toml  Dockerfile  fly.toml  pyproject.toml
.github/workflows/: main.yml
ci/: main.py
scripts/: init_db.sh
src/: lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
